--- a/css/style.css
+++ b/css/style.css
@@ -111,9 +111,9 @@ body{margin:0; background-color:#000;color: #fff;/*! background-image: url(../im
 
 section{height: 100vh;width: 100%;position: relative;}
 p,li{font-family: 'Akrobat-Regular';font-size: 16px;font-weight: 500;line-height: 22px;letter-spacing: 0.028em;}
-h1{max-width: 520px; font-family: 'DrukTextWideCyr-Bold', Arial;font-size: 55px;line-height: 60px;text-align: center;letter-spacing: 0.015em;font-weight: 400;}
+h1{max-width: 520px; font-size: 55px;line-height: 60px;text-align: center;letter-spacing: 0.015em;font-weight: 400;font-family: 'DrukTextCyr-Bold';}
 h2,h3,h4,h5,ul{margin: 0;}
-h3.offset-up{position: relative;pointer-events: none;z-index: 1;margin: -110px auto 92px auto !important;}
+h3.offset-up{position: relative;pointer-events: none;z-index: 1;margin: -210px auto 92px auto !important;}
 .img-wrap img{width: 100%}
 .img-solo{width: 100%; max-width: 875px;margin: 0 auto;height: 0;padding-bottom: 34%;overflow: hidden;}
 
@@ -198,7 +198,7 @@ body.closed .dog-item[data-id="5"]{margin-top: calc(((100vh - (45vw / 1.714285))
 .dog-item[data-id="2"]{margin-top: calc(((100vh - (45vw / 1.714285)) / 2) + ((45vw / 1.714285) * 1) + ((((100vh - (45vw / 1.714285)) / 2) * 1) - 40px));}
 .dog-item[data-id="3"]{margin-top: calc(((100vh - (45vw / 1.714285)) / 2) + ((45vw / 1.714285) * 2) + ((((100vh - (45vw / 1.714285)) / 2) * 2) - 80px));}
 .dog-item[data-id="4"]{margin-top: calc(((100vh - (45vw / 1.714285)) / 2) + ((45vw / 1.714285) * 3) + ((((100vh - (45vw / 1.714285)) / 2) * 3) - 120px));}
-.dog-item[data-id="5"]{margin-top: calc(((100vh - (45vw / 1.714285)) / 2) + ((45vw / 1.714285) * 4) + ((((100vh - (45vw / 1.714285)) / 2) * 4) - 120px));}
+.dog-item[data-id="5"]{margin-top: calc(((100vh - (45vw / 1.714285)) / 2) + ((45vw / 1.714285) * 4) + ((((100vh - (45vw / 1.714285)) / 2) * 4) - 160px));}
 
 
 
@@ -212,13 +212,13 @@ body[data-slide="7"] .dog-item[data-id="5"]{z-index:5}
 .dog-item{transition: all ease-in-out 1s;height: calc(100vw / 1.714285); position: absolute;top: 0;left: 0;width: 100%;height: calc(45vw / 1.714285);overflow: hidden;}
 .dog-item[data-scrollbar]{position: absolute}
 .dog-item[data-id="1"]{margin-top: calc((100vh - (45vw / 1.714285)) / 2);}
-.dog-item .img-main:after{content:"";opacity: 0; background: linear-gradient(180deg, rgba(0,0,0,0), rgba(0,0,0,1));position: absolute;transition: opacity 1s;width: 100%;height: 35%;left: 0;bottom: 0;}
+.dog-item .img-main:after{content:"";opacity: 0; background: linear-gradient(180deg, rgba(0,0,0,0), rgba(0,0,0,1));position: absolute;transition: opacity 1s;width: 100%;height: 44%;left: 0;bottom: 0;}
 
 
 .dog-item.active{overflow-x:hidden;overflow-y:auto;height: 100vh;z-index: 5 !important;-webkit-overflow-scrolling: touch;-webkit-transform: translateZ(0px);-webkit-transform: translate3d(0,0,0);-webkit-perspective: 1000;scroll-behavior: smooth;/*! background-color: rgba(0, 0, 0, 1); */}
 .dog-item.active .img-main{transform: scale(1) translate(0px, 0px);}
 
-.dog-item.active .img-main:after{opacity: 0.7; }
+.dog-item.active .img-main:after{opacity: 0.9; }
 .dog-item.active .img-main img{cursor: default}
 .dog-item.active .dog-item-outher h2{transform: translate(-50%,354%) scale(1.33);letter-spacing: 0.04em;cursor: default;/*! text-shadow: -0 -1.2285px 0 rgb(151,151,151,0),0 -1.2285px 0 rgb(151,151,151,0),-0 1.2285px 0 rgb(151,151,151,0),0 1.2285px 0 rgb(151,151,151,0),-1.2285px -0 0 rgb(151,151,151,0),1.2285px -0 0 rgb(151,151,151,0),-1.2285px 0 0 rgb(151,151,151,0),1.2285px 0 0 rgb(151,151,151,0),-0.61425px -1.2285px 0 rgb(151,151,151,0),0.61425px -1.2285px 0 rgb(151,151,151,0),-0.61425px 1.2285px 0 rgb(151,151,151,0),0.61425px 1.2285px 0 rgb(151,151,151,0),-1.2285px -0.61425px 0 rgb(151,151,151,0),1.2285px -0.61425px 0 rgb(151,151,151,0),-1.2285px 0.61425px 0 rgb(151,151,151,0),1.2285px 0.61425px 0 rgb(151,151,151,0),-1.2285px -1.2285px 0 rgb(151,151,151,0),1.2285px -1.2285px 0 rgb(151,151,151,0),-1.2285px 1.2285px 0 rgb(151,151,151,0),1.2285px 1.2285px 0 rgb(151,151,151,0),-1.2285px -1.2285px 0 rgb(151,151,151,0),1.2285px -1.2285px 0 rgb(151,151,151,0),-1.2285px 1.2285px 0 rgb(151,151,151,0),1.2285px 1.2285px 0 rgb(151,151,151,0); */}
 .dog-item.active .dog-item-outher .header {transform: translateY(0%) scale(1,1); opacity: 1;}
@@ -228,7 +228,7 @@ body[data-slide="7"] .dog-item[data-id="5"]{z-index:5}
 .dog-item.active[data-id="4"] .img-main{transform: scale(0.45) translateX(-20%) translateY(0%);padding-bottom: 24%;opacity: 0;}
 .dog-item.active[data-id="4"] .dog-item-outher h2 {transform: translate(-52%,149%) scale(1);/*! line-height: 1.2em; */}
 .dog-item.active[data-id="4"] .dog-item-outher h2>span{/*! padding-left: 4vw; */}
-.dog-item.active[data-id="5"] .dog-item-outher h2 {transform: translate(-36%,267%) scale(1.33);}
+.dog-item.active[data-id="5"] .dog-item-outher h2 {transform: translate(-36%,723%) scale(1.33);}
 
 
 
@@ -243,7 +243,7 @@ body.closed #dogs::after{opacity: 0}
 
 
 .dog-item[data-id="3"] h2{max-width: 34vw;}
-.dog-item[data-id="5"] h2{max-width: 50vw;}
+.dog-item[data-id="5"] h2{max-width: 50vw;font-size: 1.8vw;line-height: 1.33em;}
 .dog-item[data-id="4"] h4{max-width: 100%;font-size: 35px;text-align: center;text-transform: uppercase;letter-spacing: 0.035em;margin-bottom: 140px;font-family: 'DrukTextWideCyr-Medium';}
 .dog-item[data-id="5"] h4{max-width: 100%;font-size: 25px;text-align: center;text-transform: uppercase;letter-spacing: 0.01em;margin-bottom: 140px;font-family: 'DrukTextCyr-Bold';line-height: 1.57;}
 
@@ -261,11 +261,12 @@ body.closed #dogs::after{opacity: 0}
 .dog-item-inner{transform: translateY(15%) scale(1,0);opacity: 0;transition: all ease-in-out 1s;/*! padding-top: calc(95vw / 1.714285); */}
 .dog-item-inner .first-text-block{margin: 17px auto 77px auto; width: 100%; max-width: 590px}
 .dog-item-inner h3{font-size: 60px;  letter-spacing: 0.033em;font-family: 'Akrobat-SemiBold';max-width: 880px;line-height: 0.93em;margin: 0 auto;}
-.dog-item-inner h4{font-size: 40px;  letter-spacing: 0;max-width: 880px;line-height: 1.12em;font-family: 'DrukTextWideCyr-Bold';text-transform: uppercase;margin: 100px 0 50px 0;}
+.dog-item-inner h4{font-size: 40px;  letter-spacing: 0;max-width: 880px;line-height: 1.12em;/*! font-family: 'DrukTextWideCyr-Bold'; */text-transform: uppercase;margin: 100px 0 50px 0;font-family: 'DrukTextWideCyr-Medium';}
 .dog-item-inner .column-2{width: 100%; max-width: 880px; margin: 0 auto 70px auto;display: flex;justify-content: space-between;}
 .dog-item-inner .column-2>div{width: calc(50% - 15px);}
 .dog-item-inner .short-text-block {margin: 0 auto 80px auto;width: 100%;max-width: 590px;}
 .dog-item-inner .short-text-block p{margin-bottom: 18px;}
+.dog-item-inner .short-text-block p.big{font-size: 20px;letter-spacing: 0.58px;font-family: 'Akrobat-SemiBold';}
 
 blockquote{margin: 0 auto; width: 100%; max-width: 750px;padding-top: 63px;margin-bottom: 106px;position: relative;}
 blockquote:before{content:"";background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 43 34'%3E%3Cg fill='%23FFF'%3E%3Cpath d='M37.6 0h-6.4c-3 0-5.4 2.4-5.4 5.3v6.4c0 3 2.4 5.3 5.4 5.3h6.4l1-.1v4.3c0 4.7-3.8 8.5-8.5 8.5h-2.2c-1.2 0-2.1 1-2.1 2.1 0 1.2 1 2.2 2.1 2.2h2.2C37 34 43 28.3 43 21.2V5.3C43 2.4 40.6 0 37.6 0z'/%3E%3Cpath d='M11.8 0H5.4C2.4 0 0 2.4 0 5.3v6.4c0 3 2.4 5.3 5.4 5.3h6.4l1-.1v4.3c0 4.7-3.8 8.5-8.5 8.5H2.1c-1.1 0-2.1 1-2.1 2.1C0 33 1 34 2.1 34h2.2c7.1 0 12.9-5.7 12.9-12.8V5.3c0-2.9-2.4-5.3-5.4-5.3z'/%3E%3C/g%3E%3C/svg%3E");background-repeat: no-repeat;background-size: 42px 51px;background-position: center 0px;position: absolute;top: -18px;left: calc(50% - 21px);height: 51px;width: 42px;}
@@ -310,11 +311,11 @@ blockquote.gray:before{top:-24px;}
 
 .slider-white-title{text-transformte;text-transform: uppercase;font-size: 22px;font-weight: 900;text-align: center;font-family: 'Akrobat-Bold';letter-spacing: 0.021em;margin-bottom: 25px;}
 .slider-white{background-color: #fff;color:#000;width: 100%; max-width: 875px;margin: 0 auto;border-radius: 5px;margin-bottom: 75px;position: relative;padding: 2% 0;}
-.slider-white-item{display: flex;justify-content: space-between;padding: 1% 8% 1% 3%;align-items: center;}
+.slider-white-item{display: flex;justify-content: space-between;padding: 1% 8% 1% 3%;align-items: center;min-height: 326px;}
 .slider-white-item .text-wrap{width: 48%;}
 .slider-white-item .img-wrap{padding: 0 11%;width:46.5%;}
 .slider-white-item .img-wrap img{width: 100%}
-.slider-white-item h5{font-size: 40px;font-stretch: semi-expanded;font-weight: 700;line-height: 1.1em;text-transform: uppercase;letter-spacing: -0.025em;font-family: 'DrukTextWideCyr-Bold';margin-bottom: 15px;}
+.slider-white-item h5{font-size: 40px;font-stretch: semi-expanded;/*! font-weight: 700; */line-height: 1.1em;text-transform: uppercase;letter-spacing: -0.025em;margin-bottom: 15px;font-family: 'DrukTextCyr-Bold';}
 .slider-white .lSAction{display: none}
 .slider-white .owl-nav .owl-next{position: absolute;cursor: pointer;right: -132px;top: calc(50% - 36px);background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 51 51'%3E%3Cpath fill='%23FFF' d='M49.7 23.6L3.1.2a2.1 2.1 0 00-2.8 3l14.2 22.3L.3 47.6a2.1 2.1 0 002.8 3l46.6-23.3a2.1 2.1 0 000-3.7z'/%3E%3C/svg%3E");background-repeat: no-repeat;background-position: center;background-size: 100% 100%;width: 50px;height: 60px;opacity: 0.5;transition: .3s;border: none;background-color: transparent;color: transparent;}
 .slider-white .owl-nav .owl-prev{opacity:0.5;transition:.3s;width: 50px;height: 60px;cursor: pointer;position: absolute;left: -132px;top: calc(50% - 36px);background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 51 51'%3E%3Cpath fill='%23FFF' d='M1.2 27.3l46.6 23.4a2.1 2.1 0 002.8-3L36.4 25.4 50.6 3.3a2.1 2.1 0 00-2.8-3L1.2 23.5a2.1 2.1 0 000 3.7z'/%3E%3C/svg%3E");background-repeat: no-repeat;background-position: center;background-size: 100% 100%;border: none;background-color: transparent;color: transparent;}
@@ -343,7 +344,7 @@ blockquote.gray:before{top:-24px;}
 
 
 
-.slider-contain{margin-bottom:10px;max-width: 875px;margin: 0 auto 77px auto;}
+.slider-contain{max-width: 875px;margin: 0 auto 77px auto;}
 .slider-contain .owl-prev{left: -193px;width: 54px;height: 100px;top: 0;background-repeat: no-repeat;background-position: center;background-size: 100% 100%;color: transparent;background-color: transparent;border: none;position: absolute;background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 54 102'%3E%3Cpath fill='%23FFF' d='M.9 49.5L50.3.5c.9-.7 2.2-.7 3 .1.8.9.8 2.2 0 3L5.4 51l48 47.3a2 2 0 010 3c-.8.9-2.2 1-3 0L.8 52.5c-.9-.9-.9-2.2 0-3z' opacity='.7'/%3E%3C/svg%3E");}
 .slider-contain .owl-next{right: -233px;width: 54px;height: 100px;top: 0;background-repeat: no-repeat;background-position: center;background-size: 100% 100%;color: transparent;background-color: transparent;border: none;position: absolute;background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 54 102'%3E%3Cpath fill='%23FFF' d='M53.1 49.5L3.7.5C2.8-.1 1.5-.1.7.7c-.8.9-.8 2.2 0 3L48.6 51 .6 98.3a2 2 0 000 3c.8.9 2.2 1 3 0l49.5-48.8c.9-.9.9-2.2 0-3z' opacity='.7'/%3E%3C/svg%3E");}
 .slider-contain .owl-nav{position: absolute;bottom: calc(50% + 50px);left: -20px;width: 100%;}
@@ -359,15 +360,6 @@ blockquote.gray:before{top:-24px;}
 }
 
 
-
-
-@media(max-width:1024px){}
-
-
-@media(max-width:768px){}
-
-
-@media(max-width:640px){}
 
 
 
@@ -406,4 +398,66 @@ blockquote.gray:before{top:-24px;}
 .owl-carousel .owl-video-frame{position:relative;z-index:1;height:100%;width:100%}
 
 
+
+
+@media(min-width:1920px){
+   p{font-size: 23px;line-height: 31px;letter-spacing: 0.028em;}
+   .logo-dogchow{width: 163px;height: 54px;margin: 46px 0 0 50px;}
+   .logo-tass {width: 68px;height: 69px;margin: 40px 37px 0 0;}
+   #section1-h1 {width: 383px;height: 85px;margin-bottom: -4px;margin-top: 19vh;}
+   h1 {max-width: 779px; font-size: 75px;line-height: 82px;letter-spacing: 1.071429px;}
+   .btn-down {width: 50px;height: 50px;background-size: 23px 23px;margin-top: 74px;}
+   .soc-btns {width: 222px;height: 48px;margin: 0 auto 50px auto;}
+   .ya-share2__container_size_m .ya-share2__icon {height: 24px;width: 24px;}
+   .soc-btns .ya-share2__badge{padding: 10px;margin: 0 13px;}
+   #section-2 p {max-width: 697px;font-size: 23px;line-height: 32px;letter-spacing: 0.03em;text-align: left;margin-bottom: 36px;}
+   #menu {width: 35px;height: 13px;margin-top: 66px;margin-right: 109px;}
+   .progress-circle {width: 132px;height: 132px;right: 16px;bottom: 14px;}
+   .dog-item.active[data-id="1"] .img-main {transform: scale(0.838) translate(0px, 152px);}
+   .dog-item-inner .first-text-block{margin: 56px auto 104px auto;max-width: 832px;}
+   .slider-white-title{font-size: 30px;margin-bottom: 38px;}
+   .slider-white{max-width: 1235px;margin-bottom: 130px;}
+   .slider-white-item {padding: 1% 7% 1% 3%;min-height: 470px;}
+   .slider-white-item h5 {font-size: 50px;margin-bottom: 53px;}
+   .slider-white-item p{font-size: 20px;line-height: 31px;max-width: 450px;}
+   .slider-white .owl-nav .owl-next{right: -186px;top: calc(50% - 55px);width: 72px;height: 74px;}
+   .slider-white .owl-nav .owl-prev{left: -186px;top: calc(50% - 55px);width: 72px;height: 74px;}
+   blockquote::before {background-size: 60px 60px;top: -20px;left: calc(50% - 30px);height: 60px;width: 60px;}
+   blockquote p {font-size: 35px;}
+   blockquote {max-width: 1000px;padding-top: 63px;margin-bottom: 150px;}
+   blockquote.gray h5 {font-size: 30px;margin-bottom: 38px;}
+   blockquote.gray p {font-size: 23px;line-height: 31px;letter-spacing: 0.028em;}
+    .blockquote-name {font-size: 25px;margin-top: 32px;}
+    .blockquote-job {max-width: 403px;margin: 30px auto 0 auto;font-size: 16px;font-weight: 700;line-height: 22px;text-align: center;letter-spacing: 0.464px;}
+    .slider-fullscreen .owl-next {right: 10px;width: 103px;height: 145px;}
+    .slider-fullscreen .owl-prev {right: 10px;width: 103px;height: 145px;}
+    .slider-fullscreen .owl-nav {bottom: calc(50% + 72px);left: -20px;}
+    .dog-item-inner h3 {font-size: 84px;max-width: 1238px;line-height: 0.94em;}
+    h3.offset-up {margin: -251px auto 130px auto !important;}
+    .dog-item-inner .column-2{max-width: 1238px;margin: 0 auto 125px auto;}
+    .dog-item-inner .column-2 p{font-size: 22px;}
+    .dog-item-inner .short-text-block {margin: 0 auto 111px auto;  max-width: 830px;}
+    .dog-item-inner h4 {font-size: 56px; max-width: 820px; margin: 143px auto 66px auto;font-size: 56px;font-weight: 700;line-height: 63.52941px;letter-spacing: 0.06em;}
+    .slider-contain {max-width: 1236px;margin: 0 auto 110px auto;}
+    .slider-contain .owl-prev{left: -280px;width: 75px;height: 152px;}
+    .slider-contain .owl-next{right: -318px;width: 75px;height: 152px;}
+    .slider-contain .owl-nav{bottom: calc(50% + 77px);left: -20px;width: 100%;}
+    .title-next {margin: 46px auto 55px auto;width: 100%;padding-bottom: 75px; background-position: center calc(100% - 34px);  background-size: 24px 23px;text-align: center;}
+    .title-next svg{width: auto;height: 117px;}
+}
+
+
+
+@media(min-width:2560px){
+   #section1-h1 {width: 512px;height: 119px;margin-bottom: -4px;margin-top: 19vh;}
+   h1 {max-width: 1014px; font-size: 100px;line-height: 110px;}
+   .btn-down {width: 50px;height: 50px; background-size: 33px 33px;margin-top: 90px;}
+  #section-2 p {max-width: 988px;text-align: left;margin-bottom: 43px;font-size: 30px;font-weight: 600;line-height: 43px;letter-spacing: 0.8700001px;}
+
+}
+
+@media(max-width:768px){}
+
+
+@media(max-width:640px){}
 
